@@ -1,3 +1,9 @@
+Wed Dec 19 10:19:10 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/amibe/ds/Vertex.java (getLocalQuadric): Another
+	attempt to detect degenerated cases when incident triangles are
+	coplanar.
+
 Tue Dec 18 12:20:34 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/algos2d/SmoothNodes2D.java (main): Copy
